webapp/css/survey.css
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ general tags ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/* NOTE: the mnemonic for margin or padding order is TRIBBLE: Top Right Bottom Left */

:root {
    --color-background-question-odd-story: #e1ebff; 
    --color-background-question-even-story: #e9f7ea; 
    --color-background-tell-another-story: #faf1d9;
    --color-background-question-participant: #faf1d9;

    --color-button-remove-story: #646262;
    --color-button-remove-story-text: white;
    --color-button-tell-another-story: #fde5a1;
    --color-button-tell-another-story-text: black;
    --color-button-submit-survey: #2c2cbd;
    --color-button-submit-survey-text: white;
}

html, body {
	font-family: Helvetica, Arial, sans-serif;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--color-body);
    min-height: 100%;
    font-size: 1em;
    overflow-y: scroll;
}

fieldset {
	border: none;
	margin-bottom: -0.6em;
}

hr {  
	display: none;
	height: 6px;
}

legend {
	margin-left: -2em;
}

legend span.narrafirma-survey-prompt {
    margin-bottom: 0;
}

textarea {
    width: 100%;
    height: auto;
    margin-top: 0.5em;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 1em;
    resize: vertical;
}

input, select {
    margin-top: 0.5em;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 1em;
}

fieldset input[type='checkbox'], input[type='radio'] {
    margin: 0.3em 0.5em 0.3em 0.3em;
}

input[type='checkbox']  { 
    margin: 1.2em 0.5em 0.3em 0.3em;
}

input:read-only {
    border: 1px solid #979696;
    color: #979696;
}

textarea:read-only {
    border: 1px solid #979696;
    color: #979696;
    resize: vertical;
}

input:-moz-read-only { /* For Firefox */
    border: 1px solid #979696;
    background-color: white;
    color: #979696;
}

textarea:-moz-read-only { /* For Firefox */
    border: 1px solid #979696;
    background-color: white;
    color: #979696;
    resize: vertical;
}

#surveyDiv {
   padding: 10px;
}

.narrafirma-survey-question-external.narrafirma-survey-question-type-header.narrafirma-preview {
	background-color: #c7daf7;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ introductory video ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

.narrafirma-survey-introductory-video-streaming {
    display: block;
    text-align: center;
    margin: 0 auto 1em auto;
}

.narrafirma-survey-introductory-video-mp4 {
    display: block;
    text-align: center;
    margin: 0 auto 0.5em auto;
    width: 560px;
    height: 315px;
}

.narrafirma-survey-text-after-introductory-video {
    margin: 0.3em 0 0 0.5em;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ story areas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

.narrafirma-survey-story {
	margin: 0 0 1em 0;
}

label.narrafirma-survey-prompt {
    margin: 0.3em 0 0 0.5em;
}

span.narrafirma-survey-prompt { 
    margin: 0.3em 0 1em 0.5em;
}

.narrafirma-survey-question-external {
    border-radius: 3px;
    background-color: var(--color-background-question-even-story);
    margin: 0.4em 0 0.4em 0;
    padding: 0.6em;
}

.narrafirma-survey-story-odd .narrafirma-survey-question-external {
	background-color: var(--color-background-question-odd-story);
}

.narrafirma-survey-participant .narrafirma-survey-question-external {
    background-color: var(--color-background-question-participant);
}

.narrafirma-survey-question-internal {
	margin: 0 1em 0 1em;
}

.narrafirma-survey-question-type-header {
    font-weight: bold;
    background-color: white;
    margin-top: 10px;
}

.narrafirma-survey-question-type-label {
    background-color: white;
}

.narrafirma-survey-image {
    display: block;
    margin: auto;
    padding: 10px;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ input areas ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

.narrafirma-survey-question-type-textarea textarea {
    margin-top: 0.4em;
    width: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    min-height: 8em;
    resize: vertical;
}

.narrafirma-survey-question-type-text input {
    margin-top: 0.4em;
    width: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

.narrafirma-survey-question-type-select select {
    margin-top: 0.5em;
}

label .narrafirma-survey-question-internal .narrafirma-survey-question-type-checkbox {
    margin-left: 0.3em;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ slider ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */


.narrafirma-survey-question-type-slider table {
    min-width: 100%;
}

.narrafirma-survey-question-type-slider .narrafirma-survey-question-internal {
    text-align: center;
    margin-top: 1em;
}

.narrafirma-survey-question-type-slider .narrafirma-survey-low {
    text-align: right;
    font-size: 0.9em;
    margin: 0 0.5em 0 0.5em;
    white-space: nowrap;
}

.narrafirma-survey-question-type-slider .narrafirma-survey-slider {
    /* text-align: center; */
}

.narrafirma-survey-question-type-slider .narrafirma-survey-high {
    text-align: left;
    font-size: 0.9em;
    margin: 0 0.5em 0 0.5em;
    white-space: nowrap;
}

.narrafirma-survey-question-type-slider .narrafirma-survey-high-arrow {
    white-space: nowrap;
}

.narrafirma-survey-value {
	text-align: left;
	font-size: 0.9em;
    margin-left: 0.5em;
    white-space: nowrap;
}

.narrafirma-survey-value:focus {
    background-color: white;
    border: 1px solid black;
}

input[type='range']{
    height: 0.5em;
    border: none;
    margin: 0 0.4em 0 0.4em;
}

/* mobile */
@media screen and (max-width: 600px) { 
    input[type='range']{
        max-width: 30%;
        min-width: 10%;
    }
 }

/* tablet */
@media screen and (min-width: 600px) { 
    input[type='range']{
        max-width: 50%;
        min-width: 20%;
    }
 }
/* ... */

